@@ -245,27 +245,27 @@ public class Whitelist {
      </p>
 
      @param tag  The tag the attributes are for. The tag will be added to the allowed tag list if necessary.
-     @param keys List of valid attributes for the tag
+     @param attributes List of valid attributes for the tag
      @return this (for chaining)
      */
-    public Whitelist addAttributes(String tag, String... keys) {
+    public Whitelist addAttributes(String tag, String... attributes) {
         Validate.notEmpty(tag);
-        Validate.notNull(keys);
-        Validate.isTrue(keys.length > 0, "No attributes supplied.");
+        Validate.notNull(attributes);
+        Validate.isTrue(attributes.length > 0, "No attribute names supplied.");
 
         TagName tagName = TagName.valueOf(tag);
         if (!tagNames.contains(tagName))
             tagNames.add(tagName);
         Set<AttributeKey> attributeSet = new HashSet<AttributeKey>();
-        for (String key : keys) {
+        for (String key : attributes) {
             Validate.notEmpty(key);
             attributeSet.add(AttributeKey.valueOf(key));
         }
-        if (attributes.containsKey(tagName)) {
-            Set<AttributeKey> currentSet = attributes.get(tagName);
+        if (this.attributes.containsKey(tagName)) {
+            Set<AttributeKey> currentSet = this.attributes.get(tagName);
             currentSet.addAll(attributeSet);
         } else {
-            attributes.put(tagName, attributeSet);
+            this.attributes.put(tagName, attributeSet);
         }
         return this;
     }
@@ -282,60 +282,60 @@ public class Whitelist {
      </p>
 
      @param tag  The tag the attributes are for.
-     @param keys List of invalid attributes for the tag
+     @param attributes List of invalid attributes for the tag
      @return this (for chaining)
      */
-    public Whitelist removeAttributes(String tag, String... keys) {
+    public Whitelist removeAttributes(String tag, String... attributes) {
         Validate.notEmpty(tag);
-        Validate.notNull(keys);
-        Validate.isTrue(keys.length > 0, "No attributes supplied.");
+        Validate.notNull(attributes);
+        Validate.isTrue(attributes.length > 0, "No attribute names supplied.");
 
         TagName tagName = TagName.valueOf(tag);
         Set<AttributeKey> attributeSet = new HashSet<AttributeKey>();
-        for (String key : keys) {
+        for (String key : attributes) {
             Validate.notEmpty(key);
             attributeSet.add(AttributeKey.valueOf(key));
         }
-        if(tagNames.contains(tagName) && attributes.containsKey(tagName)) { // Only look in sub-maps if tag was allowed
-            Set<AttributeKey> currentSet = attributes.get(tagName);
+        if(tagNames.contains(tagName) && this.attributes.containsKey(tagName)) { // Only look in sub-maps if tag was allowed
+            Set<AttributeKey> currentSet = this.attributes.get(tagName);
             currentSet.removeAll(attributeSet);
 
             if(currentSet.isEmpty()) // Remove tag from attribute map if no attributes are allowed for tag
-                attributes.remove(tagName);
+                this.attributes.remove(tagName);
         }
         if(tag.equals(":all")) // Attribute needs to be removed from all individually set tags
-            for(TagName name: attributes.keySet()) {
-                Set<AttributeKey> currentSet = attributes.get(name);
+            for(TagName name: this.attributes.keySet()) {
+                Set<AttributeKey> currentSet = this.attributes.get(name);
                 currentSet.removeAll(attributeSet);
 
                 if(currentSet.isEmpty()) // Remove tag from attribute map if no attributes are allowed for tag
-                    attributes.remove(name);
+                    this.attributes.remove(name);
             }
         return this;
     }
 
     /**
      Add an enforced attribute to a tag. An enforced attribute will always be added to the element. If the element
-     already has the attribute set, it will be overridden.
+     already has the attribute set, it will be overridden with this value.
      <p>
      E.g.: <code>addEnforcedAttribute("a", "rel", "nofollow")</code> will make all <code>a</code> tags output as
      <code>&lt;a href="..." rel="nofollow"&gt;</code>
      </p>
 
      @param tag   The tag the enforced attribute is for. The tag will be added to the allowed tag list if necessary.
-     @param key   The attribute key
+     @param attribute   The attribute name
      @param value The enforced attribute value
      @return this (for chaining)
      */
-    public Whitelist addEnforcedAttribute(String tag, String key, String value) {
+    public Whitelist addEnforcedAttribute(String tag, String attribute, String value) {
         Validate.notEmpty(tag);
-        Validate.notEmpty(key);
+        Validate.notEmpty(attribute);
         Validate.notEmpty(value);
 
         TagName tagName = TagName.valueOf(tag);
         if (!tagNames.contains(tagName))
             tagNames.add(tagName);
-        AttributeKey attrKey = AttributeKey.valueOf(key);
+        AttributeKey attrKey = AttributeKey.valueOf(attribute);
         AttributeValue attrVal = AttributeValue.valueOf(value);
 
         if (enforcedAttributes.containsKey(tagName)) {
@@ -352,16 +352,16 @@ public class Whitelist {
      Remove a previously configured enforced attribute from a tag.
 
      @param tag   The tag the enforced attribute is for.
-     @param key   The attribute key
+     @param attribute   The attribute name
      @return this (for chaining)
      */
-    public Whitelist removeEnforcedAttribute(String tag, String key) {
+    public Whitelist removeEnforcedAttribute(String tag, String attribute) {
         Validate.notEmpty(tag);
-        Validate.notEmpty(key);
+        Validate.notEmpty(attribute);
 
         TagName tagName = TagName.valueOf(tag);
         if(tagNames.contains(tagName) && enforcedAttributes.containsKey(tagName)) {
-            AttributeKey attrKey = AttributeKey.valueOf(key);
+            AttributeKey attrKey = AttributeKey.valueOf(attribute);
             Map<AttributeKey, AttributeValue> attrMap = enforcedAttributes.get(tagName);
             attrMap.remove(attrKey);
 
@@ -403,17 +403,17 @@ public class Whitelist {
      </p>
 
      @param tag       Tag the URL protocol is for
-     @param key       Attribute key
+     @param attribute       Attribute name
      @param protocols List of valid protocols
      @return this, for chaining
      */
-    public Whitelist addProtocols(String tag, String key, String... protocols) {
+    public Whitelist addProtocols(String tag, String attribute, String... protocols) {
         Validate.notEmpty(tag);
-        Validate.notEmpty(key);
+        Validate.notEmpty(attribute);
         Validate.notNull(protocols);
 
         TagName tagName = TagName.valueOf(tag);
-        AttributeKey attrKey = AttributeKey.valueOf(key);
+        AttributeKey attrKey = AttributeKey.valueOf(attribute);
         Map<AttributeKey, Set<Protocol>> attrMap;
         Set<Protocol> protSet;
 
@@ -438,40 +438,41 @@ public class Whitelist {
     }
 
     /**
-     Remove allowed URL protocols for an element's URL attribute.
+     Remove allowed URL protocols for an element's URL attribute. If you remove all protocols for an attribute, that
+     attribute will allow any protocol.
      <p>
      E.g.: <code>removeProtocols("a", "href", "ftp")</code>
      </p>
 
-     @param tag       Tag the URL protocol is for
-     @param key       Attribute key
-     @param protocols List of invalid protocols
+     @param tag Tag the URL protocol is for
+     @param attribute Attribute name
+     @param removeProtocols List of invalid protocols
      @return this, for chaining
      */
-    public Whitelist removeProtocols(String tag, String key, String... protocols) {
+    public Whitelist removeProtocols(String tag, String attribute, String... removeProtocols) {
         Validate.notEmpty(tag);
-        Validate.notEmpty(key);
-        Validate.notNull(protocols);
+        Validate.notEmpty(attribute);
+        Validate.notNull(removeProtocols);
 
         TagName tagName = TagName.valueOf(tag);
-        AttributeKey attrKey = AttributeKey.valueOf(key);
+        AttributeKey attr = AttributeKey.valueOf(attribute);
 
-        if(this.protocols.containsKey(tagName)) {
-            Map<AttributeKey, Set<Protocol>> attrMap = this.protocols.get(tagName);
-            if(attrMap.containsKey(attrKey)) {
-                Set<Protocol> protSet = attrMap.get(attrKey);
-                for (String protocol : protocols) {
-                    Validate.notEmpty(protocol);
-                    Protocol prot = Protocol.valueOf(protocol);
-                    protSet.remove(prot);
-                }
+        // make sure that what we're removing actually exists; otherwise can open the tag to any data and that can
+        // be surprising
+        Validate.isTrue(protocols.containsKey(tagName), "Cannot remove a protocol that is not set.");
+        Map<AttributeKey, Set<Protocol>> tagProtocols = protocols.get(tagName);
+        Validate.isTrue(tagProtocols.containsKey(attr), "Cannot remove a protocol that is not set.");
 
-                if(protSet.isEmpty()) { // Remove protocol set if empty
-                    attrMap.remove(attrKey);
-                    if(attrMap.isEmpty()) // Remove entry for tag if empty
-                        this.protocols.remove(tagName);
-                }
-            }
+        Set<Protocol> attrProtocols = tagProtocols.get(attr);
+        for (String protocol : removeProtocols) {
+            Validate.notEmpty(protocol);
+            attrProtocols.remove(Protocol.valueOf(protocol));
+        }
+
+        if (attrProtocols.isEmpty()) { // Remove protocol set if empty
+            tagProtocols.remove(attr);
+            if (tagProtocols.isEmpty()) // Remove entry for tag if empty
+                protocols.remove(tagName);
         }
         return this;
     }
